[project]
name = "agent-model-enhancer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.30",
    "langgraph>=0.6.5",
    "openai>=1.99.9",
    "langchain-google-genai>=2.1.9",
    "feature-engine>=1.8.3",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
]
